tests/baselines/reference/compoundAssignmentLHSIsValue.errors.txt
==== tests/cases/conformance/expressions/assignmentOperator/compoundAssignmentLHSIsValue.ts (80 errors) ====
    // expected error for all the LHS of compound assignments (arithmetic and addition)
    var value;
    
    // this
    class C {
        constructor() {
            this *= value;
            ~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
            this += value;
            ~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
        }
        foo() {
            this *= value;
            ~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
            this += value;
            ~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
        }
        static sfoo() {
            this *= value;
            ~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
            this += value;
            ~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
        }
    }
    
    function foo() {
        this *= value;
        ~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
        this += value;
        ~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    }
    
    this *= value;
    ~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    this += value;
    ~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    
    // identifiers: module, class, enum, function
    module M { export var a; }
    M *= value;
    ~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    M += value;
    ~
!!! error TS2364: Invalid left-hand side of assignment expression.
    
    C *= value;
    ~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    C += value;
    ~
!!! error TS2364: Invalid left-hand side of assignment expression.
    
    enum E { }
    E *= value;
    ~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    E += value;
    ~
!!! error TS2364: Invalid left-hand side of assignment expression.
    
    foo *= value;
    ~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    foo += value;
    ~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    
    // literals
    null *= value;
    ~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    null += value;
    ~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    true *= value;
    ~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    true += value;
    ~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    false *= value;
    ~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    false += value;
    ~~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    0 *= value;
    ~
!!! error TS2364: Invalid left-hand side of assignment expression.
    0 += value;
    ~
!!! error TS2364: Invalid left-hand side of assignment expression.
    '' *= value;
    ~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    '' += value;
    ~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    /d+/ *= value;
    ~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    /d+/ += value;
    ~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    
    // object literals
    { a: 0} *= value;
            ~~
!!! error TS1128: Declaration or statement expected.
    { a: 0} += value;
            ~~
!!! error TS1128: Declaration or statement expected.
    
    // array literals
    ['', ''] *= value;
    ~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    ['', ''] += value;
    ~~~~~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    
    // super
    class Derived extends C {
        constructor() {
            super();
            super *= value;
                  ~~
!!! error TS1034: 'super' must be followed by an argument list or member access.
            ~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
            super += value;
                  ~~
!!! error TS1034: 'super' must be followed by an argument list or member access.
            ~~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
        }
    
        foo() {
            super *= value;
                  ~~
!!! error TS1034: 'super' must be followed by an argument list or member access.
            ~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
            super += value;
                  ~~
!!! error TS1034: 'super' must be followed by an argument list or member access.
            ~~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
        }
    
        static sfoo() {
            super *= value;
                  ~~
!!! error TS1034: 'super' must be followed by an argument list or member access.
            ~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
            super += value;
                  ~~
!!! error TS1034: 'super' must be followed by an argument list or member access.
            ~~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
        }
    }
    
    // function expression
    function bar1() { } *= value;
                        ~~
!!! error TS1128: Declaration or statement expected.
    function bar2() { } += value;
                        ~~
!!! error TS1128: Declaration or statement expected.
    () => { } *= value;
              ~~
!!! error TS1005: ';' expected.
    () => { } += value;
              ~~
!!! error TS1005: ';' expected.
    
    // function calls
    foo() *= value;
    ~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    foo() += value;
    ~~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    
    // parentheses, the containted expression is value
    (this) *= value;
    ~~~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    (this) += value;
    ~~~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    (M) *= value;
    ~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    (M) += value;
    ~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    (C) *= value;
    ~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    (C) += value;
    ~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    (E) *= value;
    ~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    (E) += value;
    ~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    (foo) *= value;
    ~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    (foo) += value;
    ~~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    (null) *= value;
    ~~~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    (null) += value;
    ~~~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    (true) *= value;
    ~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    (true) += value;
    ~~~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    (0) *= value;
    ~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    (0) += value;
    ~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    ('') *= value;
    ~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    ('') += value;
    ~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    (/d+/) *= value;
    ~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    (/d+/) += value;
    ~~~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    ({}) *= value;
    ~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    ({}) += value;
    ~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    ([]) *= value;
    ~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    ([]) += value;
    ~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    (function baz1() { }) *= value;
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    (function baz2() { }) += value;
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    (foo()) *= value;
    ~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    (foo()) += value;
    ~~~~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.